update angular and related changes

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "SET NODE_OPTIONS=--openssl-legacy-provider && ng serve",
+    "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -13,48 +13,43 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.0.1",
-    "@angular/common": "~11.0.1",
-    "@angular/compiler": "~11.0.1",
-    "@angular/core": "~11.0.1",
-    "@angular/forms": "~11.0.1",
-    "@angular/localize": "~11.0.1",
-    "@angular/platform-browser": "~11.0.1",
-    "@angular/platform-browser-dynamic": "~11.0.1",
-    "@angular/router": "~11.0.1",
-    "@ng-bootstrap/ng-bootstrap": "^9.1.0",
-    "angular-datatable": "^2.2.1",
-    "angular-datatables": "^12.0.0",
+    "@angular/animations": "~17.3.12",
+    "@angular/common": "~17.3.12",
+    "@angular/compiler": "~17.3.12",
+    "@angular/core": "~17.3.12",
+    "@angular/forms": "~17.3.12",
+    "@angular/localize": "~17.3.12",
+    "@angular/platform-browser": "~17.3.12",
+    "@angular/platform-browser-dynamic": "~17.3.12",
+    "@angular/router": "~17.3.12",
+    "@ng-bootstrap/ng-bootstrap": "^16.0.0",
     "angular-in-memory-web-api": "^0.11.0",
     "bootstrap": "^3.4.1",
     "faker": "^5.1.0",
     "json-server": "^0.16.3",
     "moment": "^2.29.1",
-    "ng2-bootstrap": "^1.6.3",
-    "ng2-bootstrap-alert": "^0.1.2",
-    "ngx-bootstrap": "^6.2.0",
+    "ngx-bootstrap": "^12.0.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.13.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1100.2",
-    "@angular/cli": "~11.0.2",
-    "@angular/compiler-cli": "~11.0.1",
-    "@angular/localize": "^11.0.2",
-    "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.11.1",
+    "@angular-devkit/build-angular": "17.3.11",
+    "@angular/cli": "~17.3.11",
+    "@angular/compiler-cli": "~17.3.12",
+    "@types/jasmine": "~3.10.18",
+    "@types/node": "^12.20.55",
     "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.6.0",
+    "jasmine-core": "~5.5.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.1.0",
+    "karma": "~6.4.4",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "^2.1.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.0.2"
+    "typescript": "~5.2.2"
   }
 }
