--- a/.gitignore
+++ b/.gitignore
@@ -40,7 +40,13 @@ npm-debug.log
 yarn-error.log
 testem.log
 /typings
+/.angular
+/.angular/cache
 
 # System Files
 .DS_Store
 Thumbs.db
+
+# Visual Studio Code
+/.vscode
+!.vscode/settings.json
